--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>                <div class="header">
         
         <div class="header-left">
-          <a class="active" href="#home">Home</a>
+          <a class="active" href="https://github.com/portus2001/portus2001.github.io-task/edit/master/index.html">Home</a>
 
         </div>
         <div class="header-right">
